# embed-x

./: Dockerfile  pyproject.toml  requirements.txt  src
src/: main.py
